plugins {
    id 'java'
    id 'org.springframework.boot' version '3.3.4'
    id 'io.spring.dependency-management' version '1.1.6'
    id 'application'
}

allprojects {
    group = 'sandbox.semo'
    version = '0.0.1-SNAPSHOT'
    sourceCompatibility = '17'

    repositories {
        mavenCentral()
    }
}

subprojects {
    apply plugin: 'java'
    apply plugin: 'org.springframework.boot'
    apply plugin: 'io.spring.dependency-management'
    apply plugin: 'application'

    dependencies {
        // JPA
        implementation 'org.springframework.boot:spring-boot-starter-data-jpa'

        // Oracle Database
        runtimeOnly 'com.oracle.database.jdbc:ojdbc11'

        // Lombok
        compileOnly 'org.projectlombok:lombok'
        annotationProcessor 'org.projectlombok:lombok'

        // Spring Validation
        implementation 'org.springframework.boot:spring-boot-starter-validation'

        // Spring Boot 메일 의존성
        implementation 'org.springframework.boot:spring-boot-starter-mail'

        // Test
        testImplementation 'org.springframework.boot:spring-boot-starter-test'
        testImplementation 'org.springframework.security:spring-security-test'
        testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
    }

    tasks.named('bootJar') {
        mainClass.set("sandbox.semo.application.SemoServiceApplication")
    }

    tasks.named('test') {
        useJUnitPlatform()
    }
}

tasks.bootJar {
    enabled = false
}

tasks.jar {
    enabled = true
}
